added the second and the third blog

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     >
 
     </div>
+     <div>
+        <h3>My second blog</h3>
+        <p>Twinkle twinkle little star . How I wander what you are.up avobe the wall so high.like a diamond in the sky</p
+    >
+
+    </div>
+     <div>
+        <h3>My third blog</h3>
+        <p>Twinkle twinkle little star . How I wander what you are.up avobe the wall so high.like a diamond in the sky</p
+    >
+
+    </div>
     
 </body>
 </html>
