added a list to push code

--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
     </div>
      <div>
         <h3>My third blog</h3>
-        <p>Twinkle twinkle little star . How I wander what you are.up avobe the wall so high.like a diamond in the sky</p
-    >
+        <p>Twinkle twinkle little star . How I wander what you are.up avobe the wall so high.like a diamond in the sky</p>
+        <div>
+            <h3>you to push incremental code</h3>
+            <ul>
+                <li>git add .</li>
+                <li>git commit -m"add a meaningful commit message"</li>
+                <li>git push</li>
+
+            </ul>
+
+        </div>
+    
 
     </div>
     
