added kim with a dim

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href="styles/blog.css">
     
 <body>
+    <img src="./images/flower.jpg" alt="">
     <div>
         <h3>My first website</h3>
         <p>Twinkle twinkle little star . How I wander what you are.up avobe the wall so high.like a diamond in the sky</p
@@ -25,12 +26,16 @@
         <div>
             <h3>you to push incremental code</h3>
             <ul>
-                <li>git add .</li>
+                 <li>git add .</li>
                 <li>git commit -m"add a meaningful commit message"</li>
                 <li>git push</li>
 
             </ul>
 
+        </div>
+        <div>
+            <h3>kim kim kai everyday one single dim</h3>
+            <img src="images/flower.jpg" alt="" class="">
         </div>
     
 
